# phoenix

./: README.md
e2e-exploit/: .gitignore  CMakeLists.txt  Makefile  README.md  hammer.proj.DotSettings  run_exploit.sh
e2e-exploit/src/: allocation.cpp  allocation.hpp  allocation_4mb.cpp  allocation_4mb.hpp  dram_address.cpp  dram_address.hpp  gen_rows.cpp  gen_rows.hpp  hammer.cpp  hammer.hpp  lowutils.hpp  main.cpp  measurements.cpp  measurements.hpp  pagemap.hpp  rubicon.cpp  rubicon.h
fpga-experiments/: .gitignore  .gitinfo  .pre-commit-config.yaml  Makefile  README.md  addresses_1000_2000_16000_23000.json  addresses_100_125_16000_21000.json  install_dependencies.sh  requirements.txt  setup.py
fpga-experiments/exec_pattern_results/: bitflips_20250913_110222_314776.csv  bitflips_20250913_110402_108494.csv
fpga-experiments/utrr/: setup_logging.py
images/: phoenix-logo.afdesign
plots/: README.md  plot_all.sh  plot_settings.py  requirements.txt
plots/act-based-analysis/: indices_probabilities.csv  plot_zoomin_exp.py
plots/act-rate-heatmap/: plot_trefi_time.py
plots/num-trefis-in-sync/: plot_hc_analysis_skh_128.py
plots/pc-results/: csv_to_json.py  dimm_mapper.tex  export_zen4.csv  generate_table.py
plots/refsync/: plot_prob_skh128_unified.py
plots/zooming/: plot_trr_sampling_hist.py  plot_trr_sampling_hist_zoomedin.py
poc/: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  run_exploit.sh
poc/src/: CMakeLists.txt  allocation.cpp  bit_flips.cpp  dram_address.cpp  jitted.cpp  (+1 more)
poc/tools/: CMakeLists.txt  phoenix.cpp  phoenix_cli.hpp
(+163 files in other folders)
